--- a/Forelle.Core.Tests/Forelle.Core.Tests.csproj
+++ b/Forelle.Core.Tests/Forelle.Core.Tests.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Parsing\GrammarValidatorTest.cs" />
+    <Compile Include="Parsing\StartSymbolAdderTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SymbolTest.cs" />
     <Compile Include="TestGrammar.cs" />
