--- a/Forelle.Core.Tests/packages.config
+++ b/Forelle.Core.Tests/packages.config
@@ -4,4 +4,5 @@
   <package id="NUnit" version="3.7.0" targetFramework="net452" />
   <package id="NUnit3TestAdapter" version="3.7.0" targetFramework="net452" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.3.1" targetFramework="net461" />
 </packages>
