--- a/Forelle.Core.Tests/Forelle.Core.Tests.csproj
+++ b/Forelle.Core.Tests/Forelle.Core.Tests.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{6E1377C3-2993-4AE8-987A-1712B4F77A48}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Forelle.Core.Tests</RootNamespace>
+    <RootNamespace>Forelle.Tests</RootNamespace>
     <AssemblyName>Forelle.Core.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
