Add LL(1) parsing capability and node-based test parser implementation.

--- a/Forelle.Core.Tests/Forelle.Core.Tests.csproj
+++ b/Forelle.Core.Tests/Forelle.Core.Tests.csproj
@@ -58,7 +58,9 @@
     <Compile Include="Parsing\FirstFollowCalculatorTest.cs" />
     <Compile Include="Parsing\GrammarValidatorTest.cs" />
     <Compile Include="Parsing\LeftRecursionRewriterTest.cs" />
+    <Compile Include="Parsing\ParserGeneratorTest.cs" />
     <Compile Include="Parsing\StartSymbolAdderTest.cs" />
+    <Compile Include="Parsing\TestingParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RuleTest.cs" />
     <Compile Include="SymbolTest.cs" />
