--- a/Forelle.Core.Tests/Forelle.Core.Tests.csproj
+++ b/Forelle.Core.Tests/Forelle.Core.Tests.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Parsing\Construction\DiscriminatorHelperTest.cs" />
+    <Compile Include="Parsing\Construction\ImmutableTrieTest.cs" />
     <Compile Include="Parsing\Preprocessing\AliasHelperTest.cs" />
     <Compile Include="Parsing\FirstFollowCalculatorTest.cs" />
     <Compile Include="Parsing\Preprocessing\GrammarValidatorTest.cs" />
