--- a/Forelle.Core.Tests/packages.config
+++ b/Forelle.Core.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ImmutableLinkedList" version="1.0.0" targetFramework="net461" />
   <package id="MedallionCollections" version="1.1.0" targetFramework="net461" />
   <package id="NUnit" version="3.7.0" targetFramework="net452" />
   <package id="NUnit3TestAdapter" version="3.7.0" targetFramework="net452" />
