--- a/Forelle.Core/Forelle.Core.csproj
+++ b/Forelle.Core/Forelle.Core.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ImmutableLinkedList" Version="1.0.0" />
     <PackageReference Include="MedallionCollections" Version="1.1.0" />
     <PackageReference Include="System.Collections.Immutable" Version="1.3.1" />
     <PackageReference Include="System.ValueTuple" Version="4.3.1" />
