Refactor expected failure tests to categorize them explicitly. Add a new expected failure case, as well as a passing test for dangling else.

--- a/Forelle.Core.Tests/Forelle.Core.Tests.csproj
+++ b/Forelle.Core.Tests/Forelle.Core.Tests.csproj
@@ -63,8 +63,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExpectedFailureTests.cs" />
     <Compile Include="Parsing\Construction\AmbiguousGrammarParserGeneratorTest.cs" />
-    <Compile Include="Parsing\Construction\DiscriminatorExpansionEdgeCasesTest.cs" />
     <Compile Include="Parsing\Construction\DiscriminatorHelperTest.cs" />
     <Compile Include="Parsing\Construction\ImmutableTrieTest.cs" />
     <Compile Include="Parsing\Construction\LargeGrammarTest.cs" />
