Implement rewriting of multiple null derivation cases.
Also fix an issue with GrammarValidator in reporting on self-recursive symbols.

Also improve test coverage and comments in LeftRecursionRewriter

--- a/Forelle.Core.Tests/Forelle.Core.Tests.csproj
+++ b/Forelle.Core.Tests/Forelle.Core.Tests.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Parsing\Preprocessing\GrammarValidatorTest.cs" />
     <Compile Include="Parsing\Preprocessing\LeftRecursionRewriterTest.cs" />
     <Compile Include="Parsing\Construction\ParserGeneratorTest.cs" />
+    <Compile Include="Parsing\Preprocessing\MultipleNullDerivationRewriterTest.cs" />
     <Compile Include="Parsing\Preprocessing\StartSymbolAdderTest.cs" />
     <Compile Include="Parsing\Construction\TestingParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
