LL(1) test passing

--- a/Forelle.Core.Tests/Forelle.Core.Tests.csproj
+++ b/Forelle.Core.Tests/Forelle.Core.Tests.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Parsing\Construction\ImmutableTrieTest.cs" />
     <Compile Include="Parsing\Construction\LargeGrammarTest.cs" />
     <Compile Include="Parsing\Construction\ParserInterpeter.cs" />
+    <Compile Include="Parsing\Construction\ParserPrinter.cs" />
     <Compile Include="Parsing\PotentialParseNodeParser.cs" />
     <Compile Include="Parsing\Preprocessing\AliasHelperTest.cs" />
     <Compile Include="Parsing\FirstFollowCalculatorTest.cs" />
