add testing implementation of GPEG algorithm. Ambiguity resolution not yet handled

--- a/Forelle.Core.Tests/Forelle.Core.Tests.csproj
+++ b/Forelle.Core.Tests/Forelle.Core.Tests.csproj
@@ -81,6 +81,8 @@
     <Compile Include="Parsing\Preprocessing\MultipleNullDerivationRewriterTest.cs" />
     <Compile Include="Parsing\Preprocessing\StartSymbolAdderTest.cs" />
     <Compile Include="Parsing\Construction\TestingParser.cs" />
+    <Compile Include="Parsing\TestingGraphPegParserInterpreter.cs" />
+    <Compile Include="Parsing\TestingGraphPegParserInterpreterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RuleTest.cs" />
     <Compile Include="SymbolTest.cs" />
